part1/1.07/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeapp-dep-1.07
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeapp
  template:
    metadata:
      labels:
        app: kubeapp
    spec:
      containers:
        - name: kubeapp
          image: heseduud/kubeapp:1.07
