part1/1.07/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeapp-svc
spec:
  type: ClusterIP
  selector:
    app: kubeapp
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 5000
