part1/1.07/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubeapp-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: kubeapp-svc
          servicePort: 2345
